--- a/settings.yaml
+++ b/settings.yaml
@@ -1,10 +1,39 @@
 settings:
+  backend:
+    # The AAD tenant ID to which the subscription is connected containing the backend storage account.
+    tenant_id: "tenant_idasdfasdf"
+    # The subscription ID in which the backend storage account is deployed.
+    subscription_id: "subsc_idasdfasdf"
+    # The resource group in which the backend storage account is located.
+    resource_group_name: "rg-asdfasdf"
+    # The storage account name in which the BLOB container is located for storing the Terraform state file.
+    storage_account_name: "strasdfasdf"
+    # The blob container name in which the Terraform state file will be stored.
+    container_name: "containerasdfasdf"
+    # The name of the Terraform state file.
+    key: "terraform-caf-es.tfstate"
   core:
+    # The name of the top management group, which will be created, under which all subsequent Managemet Groups will be created, e.g. "mycompany"
     root_id: "contoso"
+    # The Display name of the top Management Group, e.g. "My Company Ltd."
     root_name: "Contoso Ltd."
+    # The default Azure region used for all resources, e.g. "westeurope"
+    default_location: "westeurope"
   connectivity:
-    deploy: true
-    subscription_id: "connectivitysdfasfdasd"
+    # Affects the default setting of the deploy_connectivity_resources variable. Will be either true or false.
+    deploy: true/false
+    # The connectivitiy subscription ID.
+    subscription_id: ""
   management:
-    deploy: true
-    subscription_id: "managementasdfasdfasdf"
+    # (true/false) Affects the default setting of the deploy_management_resources variable. Will be either true or false.
+    deploy: true/false
+    # The management subscription ID.
+    subscription_id: ""
+  custom_management_groups:
+    zone1:
+      # The display name of the custom management group
+      display_name:
+      # The ID of the parent management group.
+      parent_management_group_id:
+      # A list of subscription IDs connected to this management group.
+      subscription_ids: ["",""]
