--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
-	"name": "Terraform-Azure-Launchpad",
-	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-20.04",
+	"name": "Terraform-ES-Accelerator",
+	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
 	"features": {
 		"ghcr.io/devcontainers/features/terraform:1":{}
 	},
-	"postCreateCommand": "sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq; sudo chown -R vscode:vscode /workspaces; sudo apt-get update; sudo apt-get install dos2unix; find /workspaces -type f -exec dos2unix {} \\;"
+    "settings": {
+		"terminal.integrated.shell.linux": "/bin/bash",
+        "files.eol": "\n"
+    },
+	"postCreateCommand": "sudo apt-get update; sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq; sudo chmod +x /usr/bin/yq; sudo chown -R vscode:vscode /workspaces; sudo apt-get install dos2unix; find /workspaces -type f -exec dos2unix {} \\;",
 }
