--- a/bootstrap.yaml
+++ b/bootstrap.yaml
@@ -14,8 +14,8 @@ settings:
     subscription_id: ""
     customize: true/false
   custom_management_groups:
-    # The following group is used for the Launchpad.
-    # Add more groups if required. The name of the block is arbitrary. Just make sure the names are different from each other (e.g. launchpad, mygroup1, mygroup2 etc.).
+    # The 'launchpad' management group is used for the Launchpad subscription.
+    # Add more groups after the 'launchpad' group if required by repeating the same block with different values. The name of the block is arbitrary. Just make sure the names are different from each other (e.g. launchpad, mygroup1, mygroup2 etc.).
     launchpad:
       parent_management_group_id: "root"
       id: "launchpad"
@@ -29,8 +29,8 @@ settings:
 ##################
 # backend (Optional)
 ##################
-# configure: (Required) Decision (bool: true/false) to add backend configuration, which was created during the launchpad setup process.
-# key: (Optional if 'configure: false') The name (string) of the Terraform state file.
+# configure: (Required) Decision (bool: true/false) to add backend configuration, which was created during the launchpad setup process. If 'true' the backend configuration will be copied from the 'launchpad' folder.
+# key: (Optional if 'configure: false'. Otherwise Required) The name (string) of the Terraform state file.
 
 ##################
 # core (Required)
@@ -43,15 +43,15 @@ settings:
 # connectivity (Optional)
 ##################
 # deploy: (Required) Changes the default value (bool: true/false) of variable 'deploy_connectivity_resources' variable.
-# subscription_id: (Optional) The connectivitiy subscription ID (string).
-# customize: (Required) The option (bool: true/false) to make the variable 'configure_connectivity_resources' available in a separate file containing a local variable.
+# subscription_id: (Optional) The connectivitiy subscription ID (string). If left blank, the connectivity will use the default provider.
+# customize: (Required) The option (bool: true/false) to make the variable 'configure_connectivity_resources' available in a separate file containing a local variable presenting all available configuration options.
 
 ##################
 # management (Optional)
 ##################
 # deploy: (Required) Changes the default value (bool: true/false) of variable 'deploy_management_resources' variable.
-# subscription_id: (Optional) The management subscription ID (string).
-# customize: (Required) The option (bool: true/false) to make the variable 'configure_management_resources' available in a separate file containing a local variable.
+# subscription_id: (Optional) The management subscription ID (string). If left blank, the management resources will use the default provider.
+# customize: (Required) The option (bool: true/false) to make the variable 'configure_management_resources' available in a separate file containing a local variable presenting all available configuration options.
 
 ##################
 # custom management groups (Optional)
