--- a/test/bootstrap.yaml
+++ b/test/bootstrap.yaml
@@ -1,24 +1,24 @@
 settings:
   backend:
-    configure: true/false
+    configure: true
   core:
     root_id: "myorg"
     root_name: "My Org Ltd."
     default_location: "westeurope"
   connectivity:
-    deploy: true/false
-    subscription_id: ""
-    customize: true/false
+    deploy: false
+    subscription_id: "bf59a090-7dd1-4b1c-ab12-853f53d793e1"
+    customize: true
   management:
-    deploy: true/false
-    subscription_id: ""
-    customize: true/false
+    deploy: false
+    subscription_id: "d23d0608-39bb-4774-b1f7-9b1bf4956b10"
+    customize: true
   custom_management_groups:
     launchpad:
       parent_management_group_id: "root"
       id: "launchpad"
       display_name: "Launchpad"
-      subscription_ids: [""]
+      subscription_ids: ["4cf21e62-eb45-47bc-ba0b-6bc5f54d08a8"]
 
 ########################################################
 # Documentation
