--- a/test/bootstrap.yaml
+++ b/test/bootstrap.yaml
@@ -1,28 +1,42 @@
 settings:
-  backend:
-    configure: true
-  core:
-    root_id: "myorg"
-    root_name: "My Org Ltd."
-    default_location: "westeurope"
-  connectivity:
-    deploy: false
+  launchpad:
+    tenant_id: ""
     subscription_id: ""
-    customize: true
-  management:
-    deploy: false
-    subscription_id: ""
-    customize: true
-  custom_management_groups:
-    launchpad:
-      parent_management_group_id: "root"
-      id: "launchpad"
-      display_name: "Launchpad"
-      subscription_ids: [""]
+    account_tier: "Standard"
+    account_replication_type: "LRS"
+  es:
+    backend:
+      configure: true/false
+    core:
+      root_id: "e.g. myorg"
+      root_name: "e.g. My Org Ltd."
+      default_location: "e.g. westeurope"
+    connectivity:
+      deploy: true/false
+      subscription_id: ""
+      customize: true/false
+    management:
+      deploy: false
+      subscription_id: ""
+      customize: true
+    custom_management_groups:
+      launchpad:
+        parent_management_group_id: "root"
+        id: "launchpad"
+        display_name: "Launchpad"
+        subscription_ids: [""]
 
 ########################################################
 # Documentation
 ########################################################
+
+##################
+# launchpad
+##################
+# tenant_id: (Required) The ID (string) of the Azure Active Directory Tenant.
+# subscription_id: (Required) The ID (string) of the Azure subscription in which the launchpad resources will be deployed.
+# account_tier: (Required) Defines the tier (string) for this storage account. Valid options are Standard and Premium. For BlockBlobStorage and FileStorage accounts only Premium is valid. Changing this forces a new resource to be created.
+# account_replication_type: (Required) Defines the type of replication to use for this storage account. Valid options are LRS, GRS, RAGRS, ZRS, GZRS and RAGZRS.
 
 ##################
 # backend
